# PhotoShare

./: Dockerfile  LICENSE  READ.ME  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 0b20e2e50f42_init.py  1050996e920c_add_new_fields_to_contact_and_user_.py  1aef3040ae22_add_user_id_field_and_connection_both_.py  55c5c47d4c35_init.py  e173db7e5825_add_new_column_to_model.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py
src/utils/: py_logger.py
