[project]
name = "PhotoShare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi>=0.119.0",
    "fastapi-limiter>=0.1.6",
    "fastapi-mail>=1.5.0",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.0",
]
